Added feature engineering section on preprocessing ipynb

--- a/notebooks/Preprocess.ipynb
+++ b/notebooks/Preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8736f279",
+   "id": "68e420d7",
    "metadata": {},
    "source": [
     "# Data Preprocessing\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e2a3d85",
+   "id": "409e486f",
    "metadata": {},
    "source": [
     "## Import Libraries"
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bcdcf88b",
+   "id": "3ce5bcbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afa1a87b",
+   "id": "18fc1ef7",
    "metadata": {},
    "source": [
     "## Exploratory Data Analysis"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f8889b1a",
+   "id": "1234a9c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2fc4dfa9",
+   "id": "45a1c662",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f30d135e",
+   "id": "c5440917",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "101b42a4",
+   "id": "7cda1ba5",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1c82218",
+   "id": "70a22613",
    "metadata": {},
    "source": [
     "## Check for outliers in the data based on each feature"
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "03813917",
+   "id": "776e992a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "b9657571",
+   "id": "4289a9c3",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d686a384",
+   "id": "f22a4cc6",
    "metadata": {},
    "source": [
     "Despite having retrieved the data from 2021-10 to 2022-04, the dataset still contains records from previous years. The numerical features such as `trip_distance`, `fare_amount`, `tolls_amount`, `total_amount`, `trip_duration` also contain unrealistic values which need to be removed."
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b462cec2",
+   "id": "0c948a3e",
    "metadata": {},
    "source": [
     "## Data Cleaning"
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfe110b5",
+   "id": "4e753b30",
    "metadata": {},
    "source": [
     "To clean the code, we need to first consider the minimum possible and logical value for each column:\n",
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "c9f8284f",
+   "id": "b82995e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e25e2509",
+   "id": "97cc646d",
    "metadata": {},
    "source": [
     "Since the dataset is too large, it is not feasible to check the outlier individually for each numerical column. So instead, we looked at the 99.99th percentile of the data and decide if the value is logical and possible.\n",
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "d418df2a",
+   "id": "1590cba7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "8876ead7",
+   "id": "12946d97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "da5919d2",
+   "id": "acece112",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "d51855d1",
+   "id": "f2b330a6",
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8edb96bc",
+   "id": "1e1674e4",
    "metadata": {},
    "source": [
     "The dataset looks much cleaner now and easier to work with. In the following parts, we will begin feature engineering to facilitate our analysis later on."
@@ -504,40 +504,98 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fa09a46",
+   "id": "cba4ae81",
    "metadata": {},
    "source": [
     "## Feature Engineering"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e374a82d",
+   "metadata": {},
+   "source": [
+    "In this part, we attempt to generate features that may be helpful with our analysis."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "999ee693",
+   "execution_count": 68,
+   "id": "3d26915c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Generate the average speed (miles/hour) for each trip \n",
+    "df1 = df1.withColumn('average_speed',\n",
+    "                      func.col('trip_distance') / (func.col('trip_duration_min') / 60))\n",
+    "\n",
+    "# Encode "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "f0851bf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border='1'>\n",
+       "<tr><th>summary</th><th>average_speed</th></tr>\n",
+       "<tr><td>count</td><td>20250570</td></tr>\n",
+       "<tr><td>mean</td><td>12.204450600150766</td></tr>\n",
+       "<tr><td>stddev</td><td>7.215607152368692</td></tr>\n",
+       "<tr><td>min</td><td>0.11860167164907572</td></tr>\n",
+       "<tr><td>max</td><td>2500.8</td></tr>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "+-------+-------------------+\n",
+       "|summary|      average_speed|\n",
+       "+-------+-------------------+\n",
+       "|  count|           20250570|\n",
+       "|   mean| 12.204450600150766|\n",
+       "| stddev|  7.215607152368692|\n",
+       "|    min|0.11860167164907572|\n",
+       "|    max|             2500.8|\n",
+       "+-------+-------------------+"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.select(['average_speed']).describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "74606f74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "79.24502378396616"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.selectExpr('percentile(average_speed, 0.9999)').collect()[0][0]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95b437ca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe5d59a8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5d8d4e3",
+   "id": "4929b09d",
    "metadata": {},
    "outputs": [],
    "source": []
