Transformed preprocess ipynb to scripts

--- a/notebooks/Preprocess.ipynb
+++ b/notebooks/Preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2e21d990",
+   "id": "7ea87cf1",
    "metadata": {},
    "source": [
     "# Data Preprocessing\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4535aa07",
+   "id": "ca877ef5",
    "metadata": {},
    "source": [
     "## Import Libraries"
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cdf5b728",
+   "id": "4cbaafec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1abb6227",
+   "id": "e9ca5460",
    "metadata": {},
    "source": [
     "## Exploratory Data Analysis"
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f5acbea6",
+   "id": "59a78569",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "13b83486",
+   "id": "80378c35",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "44813030",
+   "id": "1c69803a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "38f0c273",
+   "id": "c925757b",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b41e18ab",
+   "id": "979ba8ed",
    "metadata": {},
    "source": [
     "## Check for outliers in the data based on each feature"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d5de9e5d",
+   "id": "d388475f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "25bf622b",
+   "id": "fb67e2bf",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7baab1a",
+   "id": "e32e383f",
    "metadata": {},
    "source": [
     "Despite having retrieved the data from 2021-10 to 2022-04, the dataset still contains records from previous years. The numerical features such as `trip_distance`, `fare_amount`, `tolls_amount`, `total_amount`, `trip_duration` also contain unrealistic values which need to be removed."
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85ed517a",
+   "id": "d16e51aa",
    "metadata": {},
    "source": [
     "## Data Cleaning"
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "573fcad7",
+   "id": "1c4ad2e5",
    "metadata": {},
    "source": [
     "To clean the code, we need to first consider the minimum possible and logical value for each column:\n",
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "12ec3968",
+   "id": "d89086b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d313fa75",
+   "id": "22084931",
    "metadata": {},
    "source": [
     "Since the dataset is too large, it is not feasible to check the outlier individually for each numerical column. So instead, we looked at the 99.99th percentile of the data and decide if the value is logical and possible.\n",
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cd2d7dfe",
+   "id": "2d4e6aa2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c2f1a4d5",
+   "id": "7fca21d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e705e8b5",
+   "id": "3d8cc9a1",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "bb0eb296",
+   "id": "702b4a48",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3a8411f",
+   "id": "9c738174",
    "metadata": {},
    "source": [
     "The dataset looks much cleaner now and easier to work with. In the following parts, we will begin feature engineering to facilitate our analysis later on."
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbea9d64",
+   "id": "a100bc36",
    "metadata": {},
    "source": [
     "## Feature Engineering"
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4d2a6d5",
+   "id": "124830cb",
    "metadata": {},
    "source": [
     "In this part, we attempt to generate features that may be helpful with our analysis."
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "09aa4927",
+   "id": "60a0afdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "3c9e28b7",
+   "id": "9e312fb9",
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "4c5c05a2",
+   "id": "9c76c904",
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2b4aef3",
+   "id": "61ef271a",
    "metadata": {},
    "source": [
     "## Extract hourly pickup and dropoff demand in each location id\n",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "982b55b1",
+   "id": "609be349",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "07322bf6",
+   "id": "8151de6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "3358e725",
+   "id": "d4a11bc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "e4964924",
+   "id": "9a6d0b2f",
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "c6058653",
+   "id": "eb45d381",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43c20397",
+   "id": "24d6a79e",
    "metadata": {},
    "source": [
     "It appears that the average daily pickup demand is about 494 with maximum number of pickup per hour at 6907. However, since demand is strongly based on `LocationID` which explains the large standard deviation at 1023.1, we need to examine the demand statistics based on individual location to make a legitimate inference. "
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "b0898f07",
+   "id": "b13ed3ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "e3617eff",
+   "id": "07afb088",
    "metadata": {},
    "outputs": [
     {
@@ -816,16 +816,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdd63cc6",
+   "id": "8669d1ab",
    "metadata": {},
    "source": [
-    "Here we notice that most of the locations with high standard deviations are located at city center. We hypothesize that this is due to the confounding effects of day in the week (more crowded in the city during weekends and public holidays)."
+    "Here we notice that most of the locations with high standard deviations are located at city center. We hypothesize that this is due to the confounding effects of day in the week (more crowded in the city during weekends and public holidays) as well as weather of the day."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "75c906ec",
+   "id": "fee4134c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "5c63a9e6",
+   "id": "3086a11e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "565bd13f",
+   "id": "9f86498d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "9cd764c7",
+   "id": "4b611bb3",
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "d5d09368",
+   "id": "96c4cb1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "ef800e9f",
+   "id": "1ebb6ea6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "17d4eedf",
+   "id": "62e5e918",
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "f52bf4f0",
+   "id": "3e86d307",
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ea7b86a",
+   "id": "410d2949",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2a416a6",
+   "id": "99510c69",
    "metadata": {},
    "outputs": [],
    "source": []
