--- a/notebooks/Weather datascrape.ipynb
+++ b/notebooks/Weather datascrape.ipynb
@@ -2,35 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ae371546",
+   "id": "e96c1cbe",
    "metadata": {},
    "source": [
     "# NOAA Weather Data Scrape\n",
     "\n",
     "In this section, we will retrieve and query the weather data in the NYC through NOAA (National Oceanic and Atmospheric Administration). \n",
     "\n",
+    "2021 Hourly Data Collected at Central Park NY : [NY CENTRAL PARK 2021 WEATHER DATA](https://www.ncei.noaa.gov/data/global-hourly/access/2021/72505394728.csv)\n",
+    "\n",
+    "2022 Hourly Data Collected at Central Park NY : [NY CENTRAL PARK 2021 WEATHER DATA](https://www.ncei.noaa.gov/data/global-hourly/access/2022/72505394728.csv)\n",
+    "\n",
+    "\n",
     "### Aim: \n",
-    "- Count and categorise available buildings based on the Zones provided from TLC dataset.\n",
+    "- Join this data to the hourly pickup data to predict future hourly taxi ride demand.\n",
     "\n",
     "### Data dictionary:\n",
-    "- Can be retrieved from this link: [PLUTO Data Dictionary](https://data.cityofnewyork.us/api/views/64uk-42ks/files/4236b586-c55e-4358-a21a-3647735dd58b?download=true&filename=pluto_datadictionary.pdf) "
+    "- Can be retrieved from this link: [FEDERAL CLIMATE COMPLEX DATA DOCUMENTATION FOR INTEGRATED SURFACE DATA](https://www.ncei.noaa.gov/data/global-hourly/doc/isd-format-document.pdf) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "def5f2af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Token: prFURygHhcjchMdwFdWXiQwJyTzpWoDf\n",
-    "# GHCND:USW00094728"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "9275d689",
+   "execution_count": 243,
+   "id": "655d7c3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,27 +32,36 @@
     "import pandas as pd\n",
     "import json\n",
     "import numpy as np\n",
-    "import datetime\n",
+    "import datetime as dt\n",
     "\n",
-    "TOKEN = 'prFURygHhcjchMdwFdWXiQwJyTzpWoDf'\n",
-    "STATION_ID = 'GHCND:USW00094728'"
+    "# TOKEN = 'prFURygHhcjchMdwFdWXiQwJyTzpWoDf'\n",
+    "# STATION_ID = 'GHCND:USW00094728'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
-   "id": "1ad5a6e6",
+   "execution_count": 223,
+   "id": "6934b681",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3441: DtypeWarning: Columns (42,43,44,49,90) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    }
+   ],
    "source": [
-    "df2021 = pd.read_csv(\"/Users/oliver/Downloads/72505394728-2.csv\")\n",
-    "df2022 = pd.read_csv(\"/Users/oliver/Downloads/72505394728.csv\")"
+    "df2021 = pd.read_csv(\"https://www.ncei.noaa.gov/data/global-hourly/access/2021/72505394728.csv\")\n",
+    "df2022 = pd.read_csv(\"https://www.ncei.noaa.gov/data/global-hourly/access/2022/72505394728.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
-   "id": "d156fca2",
+   "execution_count": 224,
+   "id": "355c4976",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,40 +70,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
-   "id": "654e269d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['STATION', 'DATE', 'SOURCE', 'LATITUDE', 'LONGITUDE', 'ELEVATION',\n",
-       "       'NAME', 'REPORT_TYPE', 'CALL_SIGN', 'QUALITY_CONTROL', 'WND', 'CIG',\n",
-       "       'VIS', 'TMP', 'DEW', 'SLP', 'AA1', 'AA2', 'AA3', 'AB1', 'AD1', 'AE1',\n",
-       "       'AH1', 'AH2', 'AH3', 'AH4', 'AH5', 'AH6', 'AI1', 'AI2', 'AI3', 'AI4',\n",
-       "       'AI5', 'AI6', 'AJ1', 'AK1', 'AM1', 'AN1', 'AT1', 'AT2', 'AT3', 'AT4',\n",
-       "       'AT5', 'AT6', 'AT7', 'AU1', 'AU2', 'AW1', 'AW2', 'AW3', 'AX1', 'AX2',\n",
-       "       'AX3', 'AX4', 'GA1', 'GA2', 'GA3', 'GD1', 'GD2', 'GD3', 'GE1', 'GF1',\n",
-       "       'GJ1', 'KA1', 'KA2', 'KB1', 'KB2', 'KB3', 'KC1', 'KC2', 'KD1', 'KD2',\n",
-       "       'KE1', 'KG1', 'KG2', 'MA1', 'MD1', 'MF1', 'MG1', 'MH1', 'MK1', 'MW1',\n",
-       "       'OC1', 'OD1', 'OE1', 'OE2', 'OE3', 'RH1', 'RH2', 'RH3', 'WA1', 'REM',\n",
-       "       'EQD', 'AL1'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 211,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 212,
-   "id": "a25f56ac",
+   "id": "b954ec2a",
    "metadata": {},
    "outputs": [
     {
@@ -120,8 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
-   "id": "5cf78de0",
+   "execution_count": 251,
+   "id": "d13130b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,14 +112,15 @@
     "    df.ffill(inplace=True)\n",
     "    \n",
     "    # Filter data to period between 2021-10 to 2022-04\n",
-    "#     df.loc[df['A'] > 2, 'B']\n",
     "    processed_data = df.loc[(df['DATE'] <= '2022-05-01') & (df['DATE'] >= '2021-10-01'), :]\n",
     "    \n",
+    "    # Extract date and hour from datetime column\n",
+    "    processed_data.loc[:,'DATE'] = pd.to_datetime(processed_data['DATE'])\n",
+    "    processed_data.loc[:,'HOUR'] = processed_data['DATE'].dt.hour\n",
+    "    processed_data.loc[:,'DATE'] = processed_data['DATE'].dt.date\n",
+    "    \n",
     "    return processed_data[['DATE',\n",
-    "                           'LATITUDE',\n",
-    "                           'LONGITUDE',\n",
-    "                           'ELEVATION',\n",
-    "                           'NAME',\n",
+    "                           'HOUR',\n",
     "                           'TMP',\n",
     "                           'DEW',\n",
     "                           'SLP',\n",
@@ -158,18 +130,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
-   "id": "26733bef",
+   "execution_count": 252,
+   "id": "966d2cb5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py:1773: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_single_column(ilocs[0], value, pi)\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:5182: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  downcast=downcast,\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py:1667: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self.obj[key] = value\n"
+     ]
+    }
+   ],
    "source": [
     "df2 = preprocess(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
-   "id": "fede7ee8",
+   "execution_count": 254,
+   "id": "c4097e25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.to_csv(\"/Users/oliver/Downloads/weather.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "id": "1ec0ac6e",
    "metadata": {},
    "outputs": [
     {
@@ -194,10 +200,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>DATE</th>\n",
-       "      <th>LATITUDE</th>\n",
-       "      <th>LONGITUDE</th>\n",
-       "      <th>ELEVATION</th>\n",
-       "      <th>NAME</th>\n",
+       "      <th>HOUR</th>\n",
        "      <th>TMP</th>\n",
        "      <th>DEW</th>\n",
        "      <th>SLP</th>\n",
@@ -207,11 +210,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>8835</th>\n",
-       "      <td>2021-10-01T00:51:00</td>\n",
-       "      <td>40.77898</td>\n",
-       "      <td>-73.96925</td>\n",
-       "      <td>42.7</td>\n",
-       "      <td>NY CITY CENTRAL PARK, NY US</td>\n",
+       "      <td>2021-10-01</td>\n",
+       "      <td>0</td>\n",
        "      <td>16.1</td>\n",
        "      <td>6.7</td>\n",
        "      <td>1021.5</td>\n",
@@ -219,11 +219,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8836</th>\n",
-       "      <td>2021-10-01T01:51:00</td>\n",
-       "      <td>40.77898</td>\n",
-       "      <td>-73.96925</td>\n",
-       "      <td>42.7</td>\n",
-       "      <td>NY CITY CENTRAL PARK, NY US</td>\n",
+       "      <td>2021-10-01</td>\n",
+       "      <td>1</td>\n",
        "      <td>16.1</td>\n",
        "      <td>7.2</td>\n",
        "      <td>1022.1</td>\n",
@@ -231,11 +228,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8837</th>\n",
-       "      <td>2021-10-01T02:51:00</td>\n",
-       "      <td>40.77898</td>\n",
-       "      <td>-73.96925</td>\n",
-       "      <td>42.7</td>\n",
-       "      <td>NY CITY CENTRAL PARK, NY US</td>\n",
+       "      <td>2021-10-01</td>\n",
+       "      <td>2</td>\n",
        "      <td>14.4</td>\n",
        "      <td>7.8</td>\n",
        "      <td>1022.4</td>\n",
@@ -243,11 +237,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8838</th>\n",
-       "      <td>2021-10-01T03:51:00</td>\n",
-       "      <td>40.77898</td>\n",
-       "      <td>-73.96925</td>\n",
-       "      <td>42.7</td>\n",
-       "      <td>NY CITY CENTRAL PARK, NY US</td>\n",
+       "      <td>2021-10-01</td>\n",
+       "      <td>3</td>\n",
        "      <td>13.3</td>\n",
        "      <td>7.2</td>\n",
        "      <td>1022.3</td>\n",
@@ -255,11 +246,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8839</th>\n",
-       "      <td>2021-10-01T04:51:00</td>\n",
-       "      <td>40.77898</td>\n",
-       "      <td>-73.96925</td>\n",
-       "      <td>42.7</td>\n",
-       "      <td>NY CITY CENTRAL PARK, NY US</td>\n",
+       "      <td>2021-10-01</td>\n",
+       "      <td>4</td>\n",
        "      <td>12.8</td>\n",
        "      <td>7.8</td>\n",
        "      <td>1022.3</td>\n",
@@ -273,17 +261,11 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3871</th>\n",
-       "      <td>2022-04-30T19:51:00</td>\n",
-       "      <td>40.77898</td>\n",
-       "      <td>-73.96925</td>\n",
-       "      <td>42.7</td>\n",
-       "      <td>NY CITY CENTRAL PARK, NY US</td>\n",
+       "      <td>2022-04-30</td>\n",
+       "      <td>19</td>\n",
        "      <td>19.4</td>\n",
        "      <td>-8.3</td>\n",
        "      <td>1016.8</td>\n",
@@ -291,11 +273,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3872</th>\n",
-       "      <td>2022-04-30T20:51:00</td>\n",
-       "      <td>40.77898</td>\n",
-       "      <td>-73.96925</td>\n",
-       "      <td>42.7</td>\n",
-       "      <td>NY CITY CENTRAL PARK, NY US</td>\n",
+       "      <td>2022-04-30</td>\n",
+       "      <td>20</td>\n",
        "      <td>18.9</td>\n",
        "      <td>-9.4</td>\n",
        "      <td>1016.9</td>\n",
@@ -303,11 +282,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3873</th>\n",
-       "      <td>2022-04-30T21:51:00</td>\n",
-       "      <td>40.77898</td>\n",
-       "      <td>-73.96925</td>\n",
-       "      <td>42.7</td>\n",
-       "      <td>NY CITY CENTRAL PARK, NY US</td>\n",
+       "      <td>2022-04-30</td>\n",
+       "      <td>21</td>\n",
        "      <td>18.9</td>\n",
        "      <td>-8.3</td>\n",
        "      <td>1016.9</td>\n",
@@ -315,11 +291,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3874</th>\n",
-       "      <td>2022-04-30T22:51:00</td>\n",
-       "      <td>40.77898</td>\n",
-       "      <td>-73.96925</td>\n",
-       "      <td>42.7</td>\n",
-       "      <td>NY CITY CENTRAL PARK, NY US</td>\n",
+       "      <td>2022-04-30</td>\n",
+       "      <td>22</td>\n",
        "      <td>16.1</td>\n",
        "      <td>-3.9</td>\n",
        "      <td>1017.4</td>\n",
@@ -327,11 +300,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3875</th>\n",
-       "      <td>2022-04-30T23:51:00</td>\n",
-       "      <td>40.77898</td>\n",
-       "      <td>-73.96925</td>\n",
-       "      <td>42.7</td>\n",
-       "      <td>NY CITY CENTRAL PARK, NY US</td>\n",
+       "      <td>2022-04-30</td>\n",
+       "      <td>23</td>\n",
        "      <td>14.4</td>\n",
        "      <td>-6.1</td>\n",
        "      <td>1018.1</td>\n",
@@ -339,40 +309,27 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5088 rows × 9 columns</p>\n",
+       "<p>5088 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     DATE  LATITUDE  LONGITUDE  ELEVATION  \\\n",
-       "8835  2021-10-01T00:51:00  40.77898  -73.96925       42.7   \n",
-       "8836  2021-10-01T01:51:00  40.77898  -73.96925       42.7   \n",
-       "8837  2021-10-01T02:51:00  40.77898  -73.96925       42.7   \n",
-       "8838  2021-10-01T03:51:00  40.77898  -73.96925       42.7   \n",
-       "8839  2021-10-01T04:51:00  40.77898  -73.96925       42.7   \n",
-       "...                   ...       ...        ...        ...   \n",
-       "3871  2022-04-30T19:51:00  40.77898  -73.96925       42.7   \n",
-       "3872  2022-04-30T20:51:00  40.77898  -73.96925       42.7   \n",
-       "3873  2022-04-30T21:51:00  40.77898  -73.96925       42.7   \n",
-       "3874  2022-04-30T22:51:00  40.77898  -73.96925       42.7   \n",
-       "3875  2022-04-30T23:51:00  40.77898  -73.96925       42.7   \n",
+       "            DATE  HOUR   TMP  DEW     SLP  AA1\n",
+       "8835  2021-10-01     0  16.1  6.7  1021.5  0.0\n",
+       "8836  2021-10-01     1  16.1  7.2  1022.1  0.0\n",
+       "8837  2021-10-01     2  14.4  7.8  1022.4  0.0\n",
+       "8838  2021-10-01     3  13.3  7.2  1022.3  0.0\n",
+       "8839  2021-10-01     4  12.8  7.8  1022.3  0.0\n",
+       "...          ...   ...   ...  ...     ...  ...\n",
+       "3871  2022-04-30    19  19.4 -8.3  1016.8  0.0\n",
+       "3872  2022-04-30    20  18.9 -9.4  1016.9  0.0\n",
+       "3873  2022-04-30    21  18.9 -8.3  1016.9  0.0\n",
+       "3874  2022-04-30    22  16.1 -3.9  1017.4  0.0\n",
+       "3875  2022-04-30    23  14.4 -6.1  1018.1  0.0\n",
        "\n",
-       "                             NAME   TMP  DEW     SLP  AA1  \n",
-       "8835  NY CITY CENTRAL PARK, NY US  16.1  6.7  1021.5  0.0  \n",
-       "8836  NY CITY CENTRAL PARK, NY US  16.1  7.2  1022.1  0.0  \n",
-       "8837  NY CITY CENTRAL PARK, NY US  14.4  7.8  1022.4  0.0  \n",
-       "8838  NY CITY CENTRAL PARK, NY US  13.3  7.2  1022.3  0.0  \n",
-       "8839  NY CITY CENTRAL PARK, NY US  12.8  7.8  1022.3  0.0  \n",
-       "...                           ...   ...  ...     ...  ...  \n",
-       "3871  NY CITY CENTRAL PARK, NY US  19.4 -8.3  1016.8  0.0  \n",
-       "3872  NY CITY CENTRAL PARK, NY US  18.9 -9.4  1016.9  0.0  \n",
-       "3873  NY CITY CENTRAL PARK, NY US  18.9 -8.3  1016.9  0.0  \n",
-       "3874  NY CITY CENTRAL PARK, NY US  16.1 -3.9  1017.4  0.0  \n",
-       "3875  NY CITY CENTRAL PARK, NY US  14.4 -6.1  1018.1  0.0  \n",
-       "\n",
-       "[5088 rows x 9 columns]"
+       "[5088 rows x 6 columns]"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2593eaf0",
+   "id": "8765d7e5",
    "metadata": {},
    "outputs": [],
    "source": []
