Successfully implemented and tested Linear Regression and tidied up other notebooks.

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -7,7 +7,16 @@
    "source": [
     "# Exploratory Data Analysis\n",
     "\n",
-    "In this section, we seek to find any significant confounding factor that may drive the demand in specific location. This section will help us develop deeper understanding of the data and narrow down the significant features for our predictions/classifications later."
+    "In this section, we seek to find any significant confounding factor that may drive the demand in specific location. This section will help us develop deeper understanding of the data and narrow down the significant features for our predictions/classifications later.\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a35dee73",
+   "metadata": {},
+   "source": [
+    "## Import Libraries"
    ]
   },
   {
@@ -81,7 +90,7 @@
     "\n",
     "\n",
     "# Get the hourly demand data\n",
-    "pickup_hourly_demand, dropoff_hourly_demand = transform_demand(df, 'hour')"
+    "pickup_hourly_demand, dropoff_hourly_demand = transform_demand(df, 'hour')\n"
    ]
   },
   {
@@ -103,12 +112,12 @@
    "source": [
     "# Get total daily and hourly pickup demand data\n",
     "print(f\"Total of {pickup_daily_demand.count()} rows of daily pickup data\\n\"+\n",
-    "      f\"Total of {pickup_hourly_demand.count()} rows of hourly pickup data\\n\")"
+    "      f\"Total of {pickup_hourly_demand.count()} rows of hourly pickup data\\n\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4c562446",
+   "id": "4e1306c7",
    "metadata": {},
    "source": [
     "# PLUTO and TLC Zone Data"
@@ -117,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0a503e8c",
+   "id": "a88ed87c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "56fdb03c",
+   "id": "e8f7dd86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c35223ae",
+   "id": "a500ca5f",
    "metadata": {},
    "outputs": [
     {
@@ -163,13 +172,13 @@
    ],
    "source": [
     "# Get PLUTO and TLC Zone merged data\n",
-    "sjoined_df = get_merged_zone_data(sf, zones)"
+    "sjoined_df = get_merged_zone_data(sf, zones)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b6ea1fa3",
+   "id": "cf67164b",
    "metadata": {},
    "outputs": [
     {
@@ -349,12 +358,12 @@
    "source": [
     "# The merged data shows each individual lot information as well as\n",
     "# which location id they are located within in the TLC zone data\n",
-    "sjoined_df.head()"
+    "sjoined_df.head()\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "787f4d81",
+   "id": "b6cf3730",
    "metadata": {},
    "source": [
     "The following function will be helpful in aggregating the number of buildings based on their `landuse`/`building_class` in each location id. This will help us to make some inference on the temporal pattern in certain location."
@@ -363,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c7f4f5ce",
+   "id": "0cbf950a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d251e62f",
+   "id": "663ab7e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "aec97585",
+   "id": "2817c55d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94711ba6",
+   "id": "44496546",
    "metadata": {},
    "source": [
     "The building classes are encoded with alphabets (A-Z), the definition of the building classes code is as follow:\n",
@@ -467,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb0a3ecb",
+   "id": "85f76404",
    "metadata": {},
    "source": [
     "Note that each tax lot has 1 building class which explains the **major** use of structure on the tax lot. Thus, there may be other usage within the building. For instance, a lot labelled `R` (CONDOMINIUM) may have non-residential units such as office and retail units within the building."
@@ -511,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "399f0f32",
+   "id": "4e6a0fe0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "51fc440c",
+   "id": "702d66e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "eadb9c90",
+   "id": "cc764143",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a585b964",
+   "id": "400cc9f7",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2765dbd2",
+   "id": "f93a28ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d71ae9b7",
+   "id": "231471e8",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "534a53e1",
+   "id": "40e74b3a",
    "metadata": {},
    "source": [
     "Based on the plots above, only number of lots of `building_class` H (and arguably D) exhibit some linear relationship with average daily demand. This makes perfect sense since most travellers who stay in hotels will probably take the taxi if they are not taking the public transport. Thus, locations with more hotels will attract more demand for taxi rides."
@@ -624,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "77040db3",
+   "id": "506e6401",
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deed79a6",
+   "id": "76d4259c",
    "metadata": {},
    "source": [
     "Immediately, we notice that on average most daily demand for yellow taxi cabs is concentrated in the city center at Manhattan (most densely populated location in NYC) and the two popular airports in New York, JFK and LaGuardia airports. Since the average daily pickup counts is highly skewed (eg. most locations apart from Manhattan have low average daily pickups), the log transformation on daily pickup counts can help reduce the skewness of our data."
@@ -667,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3bdf1a1",
+   "id": "2aa5816c",
    "metadata": {},
    "source": [
     "## Daily pickups demand among boroughs"
@@ -678,13 +687,13 @@
    "id": "f39a884e",
    "metadata": {},
    "source": [
-    "In this part, we will examine the pickup demands among boroughs. "
+    "In this part, we will examine the pickup trends across the boroughs. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3949ee45",
+   "id": "f9c6f385",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "3b717bc5",
+   "id": "9a38e326",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ad477949",
+   "id": "3995d938",
    "metadata": {},
    "outputs": [
     {
@@ -751,16 +760,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7224f5c4",
+   "id": "48827813",
    "metadata": {},
    "source": [
-    "Based on the plots above, we can clearly see strong temporal patterns in the daily pickup demand among all boroughs. The Yellow vertical lines indicate federal holidays in NYC where as the Red vertical lines indicate a blizzard incident in NYC which significantly affected the demand of taxi rides. Overall, the daily pickup demand time series seem to be stationary in both mean and variance with exception to Brooklyn, Staten Island and Bronx where the volatility changes with time."
+    "Based on the plots above, we can clearly see strong temporal patterns in the daily pickup demand among all boroughs. The Yellow vertical lines indicate federal holidays in NYC where as the Red vertical lines indicate a blizzard incident in NYC which significantly affected the demand of taxi rides. Overall, apart from the period of December to February, the daily pickup demand time series in Manhattan and Queens seem to be stationary in both mean and variance. On the other hand, the volatility of daily demand in Brooklyn, Staten Island and Bronx changes with time."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e7f4a07f",
+   "id": "12e18a49",
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fe31635c",
+   "id": "15438e3a",
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98bd4ab1",
+   "id": "a36b7389",
    "metadata": {},
    "source": [
     "Focusing on the hotspots in Manhattan, we observe that the demand is at its lowest around 4-5am and slowly pick up after 5am and peak at 6pm."
@@ -972,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "947d30f7",
+   "id": "76672dde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +997,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9f540b5a",
+   "id": "01eae38d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e5f3a7af",
+   "id": "2adf23f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4a59bc78",
+   "id": "a2251a65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e5c45991",
+   "id": "d52da39e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "d515de07",
+   "id": "ac79b4d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "bd0c891c",
+   "id": "9685ad7d",
    "metadata": {},
    "outputs": [
     {
@@ -1354,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "229d9823",
+   "id": "2be7974a",
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1675,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "87a020e0",
+   "id": "b662a42f",
    "metadata": {},
    "outputs": [
     {
@@ -1697,7 +1706,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "bc9d7c1e",
+   "id": "fa578ebd",
    "metadata": {},
    "outputs": [
     {
@@ -2042,7 +2051,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "88f862c7",
+   "id": "4ca5119e",
    "metadata": {},
    "outputs": [
     {
@@ -2074,7 +2083,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "f351253b",
+   "id": "13949401",
    "metadata": {},
    "outputs": [
     {
@@ -2446,7 +2455,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "bc887bff",
+   "id": "d46fe08e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2479,7 +2488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b8d1482",
+   "id": "1ee1a7ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2489,7 +2498,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "208fd69d",
+   "id": "7e224413",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2499,7 +2508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6332a27",
+   "id": "1c62877e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2509,7 +2518,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "cf79f102",
+   "id": "5166c295",
    "metadata": {},
    "outputs": [
     {
@@ -2579,7 +2588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61bfa448",
+   "id": "c3797931",
    "metadata": {},
    "outputs": [],
    "source": []
