--- a/notebooks/Preprocess.ipynb
+++ b/notebooks/Preprocess.ipynb
@@ -11,19 +11,6 @@
     "   - TLC Yellow Taxi Trips Record 2021/10-2022/04\n",
     "   - TLC Green Taxi Trips Record 2021/10-2022/04\n",
     "\n",
-    "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Tip:</b> Use blue boxes (alert-info) for tips and notes. \n",
-    "If it’s a note, you don’t have to include the word “Note”.\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Up to you:</b> Use green boxes sparingly, and only for some specific \n",
-    "purpose that the other boxes can't cover. For example, if you have a lot \n",
-    "of related content to link to, maybe you decide to use green boxes for \n",
-    "related links from each section of a notebook.\n",
-    "</div>\n",
-    "\n",
     "***"
    ]
   },
@@ -52,7 +39,7 @@
     "\n",
     "%matplotlib inline\n",
     "sns.set(style='whitegrid', palette='pastel', color_codes=True)\n",
-    "sns.mpl.rc('figure', figsize=(10,6))"
+    "sns.mpl.rc('figure', figsize=(10,6))\n"
    ]
   },
   {
@@ -60,7 +47,7 @@
    "id": "e9ca5460",
    "metadata": {},
    "source": [
-    "## Exploratory Data Analysis"
+    "## Inspect the dataset"
    ]
   },
   {
@@ -79,7 +66,7 @@
     ")\n",
     "\n",
     "# Read the parquet dataset\n",
-    "df = spk.read.parquet('/Users/oliver/Downloads/MAST30034_Python-main/data/tlc_data')"
+    "df = spk.read.parquet('/Users/oliver/Downloads/MAST30034_Python-main/data/tlc_data')\n"
    ]
   },
   {
@@ -123,7 +110,7 @@
     "df.printSchema()\n",
     "\n",
     "print(\"Number of instances: \", df.count(), '\\n',\n",
-    "      \"Number of features: \", len(df.columns))"
+    "      \"Number of features: \", len(df.columns))\n"
    ]
   },
   {
@@ -140,7 +127,8 @@
     "               'DOLocationID': 'do_location_id'}\n",
     "\n",
     "for key, value in column_name.items():\n",
-    "    df = df.withColumnRenamed(key,value)"
+    "    df = df.withColumnRenamed(key,value)\n",
+    "    "
    ]
   },
   {
@@ -180,7 +168,7 @@
    ],
    "source": [
     "# Check variable names\n",
-    "df.columns"
+    "df.columns\n"
    ]
   },
   {
@@ -311,10 +299,6 @@
     "print(\"\\ntpep_dropoff_datetime:\\n\\tMax:\", df.agg({\"tpep_dropoff_datetime\": \"max\"}).collect()[0][0],\n",
     "     \"\\n\\tMin:\", df.agg({\"tpep_dropoff_datetime\": \"min\"}).collect()[0][0], '\\n')\n",
     "\n",
-    "# Check shortest and longest trip duration\n",
-    "# print(\"trip_duration_min:\\n\\tMax:\", df.agg({\"trip_duration_min\": \"max\"}).collect()[0][0],\n",
-    "#      \"\\n\\tMin:\", df.agg({\"trip_duration_min\": \"min\"}).collect()[0][0])\n",
-    "\n",
     "# Check other variables\n",
     "df.select(['passenger_count',\n",
     "           'trip_distance',\n",
@@ -327,7 +311,7 @@
     "           'improvement_surcharge',\n",
     "           'total_amount',\n",
     "           'congestion_surcharge',\n",
-    "           'airport_fee']).describe().show(vertical=True)"
+    "           'airport_fee']).describe().show(vertical=True)\n"
    ]
   },
   {
@@ -377,7 +361,7 @@
     "               (func.col('improvement_surcharge') >= 0) &\n",
     "               (func.col('total_amount') >= 0) &\n",
     "               (func.col('congestion_surcharge') >= 0) &\n",
-    "               (func.col('airport_fee') >= 0))"
+    "               (func.col('airport_fee') >= 0))\n"
    ]
   },
   {
@@ -403,7 +387,7 @@
     "                (func.col('tip_amount') <= df1.selectExpr('percentile(tip_amount, 0.9999)').collect()[0][0]) &\n",
     "                (func.col('total_amount') <= df1.selectExpr('percentile(total_amount, 0.9999)').collect()[0][0]) &\n",
     "                (func.col('tolls_amount') <= df1.selectExpr('percentile(tolls_amount, 0.9999)').collect()[0][0]) &\n",
-    "                (func.col('trip_duration_min') <= 300))"
+    "                (func.col('trip_duration_min') <= 300))\n"
    ]
   },
   {
@@ -417,7 +401,7 @@
     "df1 = df1.where((func.col(\"pickup_date\") >= '2021-10-01') & \n",
     "                (func.col(\"dropoff_date\") >= '2021-10-01') &\n",
     "                (func.col(\"pickup_date\") <= '2022-04-30') & \n",
-    "                (func.col(\"dropoff_date\") <= '2022-04-30'))"
+    "                (func.col(\"dropoff_date\") <= '2022-04-30'))\n"
    ]
   },
   {
@@ -493,7 +477,7 @@
     "do_earliest, do_latest = df1.select(func.min(\"dropoff_date\"), func.max(\"dropoff_date\")).first()\n",
     "\n",
     "print(f\"pickup_date: {pu_earliest} - {pu_latest}\")\n",
-    "print(f\"dropoff_date: {do_earliest} - {do_latest}\")"
+    "print(f\"dropoff_date: {do_earliest} - {do_latest}\")\n"
    ]
   },
   {
@@ -510,88 +494,6 @@
    "metadata": {},
    "source": [
     "## Feature Engineering"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "124830cb",
-   "metadata": {},
-   "source": [
-    "In this part, we attempt to generate features that may be helpful with our analysis."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "60a0afdd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generate the average speed (miles/hour) for each trip \n",
-    "df1 = df1.withColumn('average_speed',\n",
-    "                      func.col('trip_distance') / (func.col('trip_duration_min') / 60))\n",
-    "\n",
-    "# Encode "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "9e312fb9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border='1'>\n",
-       "<tr><th>summary</th><th>average_speed</th></tr>\n",
-       "<tr><td>count</td><td>20318397</td></tr>\n",
-       "<tr><td>mean</td><td>12.201251572082002</td></tr>\n",
-       "<tr><td>stddev</td><td>7.213843701866078</td></tr>\n",
-       "<tr><td>min</td><td>0.11860167164907572</td></tr>\n",
-       "<tr><td>max</td><td>2500.8</td></tr>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "+-------+-------------------+\n",
-       "|summary|      average_speed|\n",
-       "+-------+-------------------+\n",
-       "|  count|           20318397|\n",
-       "|   mean| 12.201251572082002|\n",
-       "| stddev|  7.213843701866078|\n",
-       "|    min|0.11860167164907572|\n",
-       "|    max|             2500.8|\n",
-       "+-------+-------------------+"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df1.select(['average_speed']).describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "9c76c904",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "79.23072873558755"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df1.selectExpr('percentile(average_speed, 0.9999)').collect()[0][0]"
    ]
   },
   {
@@ -629,7 +531,7 @@
    "source": [
     "# Aggregate and count number of hourly instances in each location id\n",
     "pickup_hourly_demand = df1.groupBy(\"pu_location_id\", \"pickup_date\", \"pickup_hour\").count()\n",
-    "dropoff_hourly_demand = df1.groupBy(\"do_location_id\", \"dropoff_date\", \"dropoff_hour\").count()"
+    "dropoff_hourly_demand = df1.groupBy(\"do_location_id\", \"dropoff_date\", \"dropoff_hour\").count()\n"
    ]
   },
   {
@@ -641,7 +543,7 @@
    "source": [
     "# Aggregate and count number of daily instances in each location id\n",
     "pickup_daily_demand = df1.groupBy(\"pu_location_id\", \"pickup_date\").count()\n",
-    "dropoff_daily_demand = df1.groupBy(\"do_location_id\", \"dropoff_date\").count()"
+    "dropoff_daily_demand = df1.groupBy(\"do_location_id\", \"dropoff_date\").count()\n"
    ]
   },
   {
@@ -680,7 +582,7 @@
     }
    ],
    "source": [
-    "pickup_daily_demand.describe()"
+    "pickup_daily_demand.describe()\n"
    ]
   },
   {
@@ -719,7 +621,7 @@
     }
    ],
    "source": [
-    "dropoff_daily_demand.describe()"
+    "dropoff_daily_demand.describe()\n"
    ]
   },
   {
